<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_login_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_login_vertical_margin"
    android:background="@drawable/bg"
    tools:context="com.totalbp.mm.LoginActivity">

    <RelativeLayout
        android:layout_marginTop="@dimen/common_20_dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_login_top"
        android:id="@+id/header_layout">
        <ImageView
            android:src="@drawable/main_navbar_logo"
            android:id="@+id/logoToolbar"
            android:layout_width="80dp"
            android:layout_marginTop="@dimen/common_5_dp"
            android:layout_marginStart="@dimen/common_20_dp"
            android:layout_marginBottom="@dimen/common_10_dp"
            android:layout_height="80dp"
            android:padding="2dp"/>

        <ImageView
            android:src="@drawable/main_navbar_title_300px"
            android:id="@+id/title_logo"
            android:layout_width="wrap_content"
            android:layout_toRightOf="@id/logoToolbar"
            android:layout_marginEnd="125dp"
            android:layout_marginTop="@dimen/common_0_dp"
            android:layout_height="80dp"
            android:padding="5dp"/>

        <ImageView
            android:src="@drawable/version_200px"
            android:id="@+id/version_logo"
            android:layout_below="@id/title_logo"
            android:layout_width="wrap_content"
            android:layout_toRightOf="@id/logoToolbar"
            android:layout_marginTop="-15dp"
            android:layout_height="wrap_content"
            android:padding="5dp"/>

        <!--<TextView-->
        <!--android:layout_marginTop="@dimen/common_10_dp"-->
        <!--android:textColor="#FFFFFF"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_toRightOf="@id/logoToolbar"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/title_header_1"-->
        <!--android:text="Construction"-->
        <!--android:textSize="20sp"-->
        <!--android:textAlignment="textStart"-->
        <!--android:textStyle=""/>-->
        <!--<TextView-->
        <!--android:textColor="#FFFFFF"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:id="@+id/title_header_2"-->
        <!--android:layout_toRightOf="@id/logoToolbar"-->
        <!--android:layout_below="@id/title_header_1"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Integrated"-->
        <!--android:textSize="20sp"-->
        <!--android:textAlignment="textStart"-->
        <!--android:textStyle=""/>-->
        <!--<TextView-->
        <!--android:textColor="#FFFFFF"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:id="@+id/title_header_3"-->
        <!--android:layout_toRightOf="@id/logoToolbar"-->
        <!--android:layout_below="@id/title_header_2"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="System"-->
        <!--android:textSize="20sp"-->
        <!--android:textAlignment="textStart"-->
        <!--android:textStyle=""/>-->
    </RelativeLayout>

    <LinearLayout
        android:layout_below="@id/header_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_login_bottom"
        android:id="@+id/bottom_layout">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_text_title"
                android:id="@+id/accountTextTitle"
                android:textSize="18sp"
                android:paddingTop="10dp"
                android:textAlignment="center"
                android:textStyle="italic"/>
            <View
                android:layout_width="20dp"
                android:layout_height="1dp"
                android:foregroundGravity="center_vertical"
                android:layout_toStartOf="@id/accountTextTitle"
                android:background="@android:color/darker_gray"/>
            <View
                android:layout_width="20dp"
                android:layout_height="1dp"
                android:foregroundGravity="center_vertical"
                android:layout_toEndOf="@id/accountTextTitle"
                android:background="@android:color/darker_gray"/>
        </RelativeLayout>


        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/nik_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="15dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_person_outline_black_24dp"/>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:id="@+id/txtInputLayoutNik"
                        android:layout_marginBottom="8dp">

                        <EditText
                            android:id="@+id/nik"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_nik"
                            android:inputType="text"
                            android:maxLines="1" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginStart="15dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_lock_outline_black_24dp"/>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:id="@+id/txtInputLayoutPassword"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        app:passwordToggleEnabled="true">
                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/common_15_dp"
                    android:text="@string/error_login"
                    android:id="@+id/error_login_text"
                    android:visibility="invisible"
                    android:textColor="@color/colorPrimary"/>


                <Button
                    android:id="@+id/nik_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:padding="12dp"
                    android:textAllCaps="false"
                    android:layout_gravity="center"
                    android:layout_width="@dimen/button_size"
                    android:background="@drawable/rounded_button_login"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/action_sign_in"
                    android:textColor="@color/white"
                    android:textSize="@dimen/button_text_size"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>